--- a/app/src/main/res/layout/activity_home_page_admin.xml
+++ b/app/src/main/res/layout/activity_home_page_admin.xml
@@ -5,15 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@color/yellow"
     tools:context=".HomePageAdmin">
 
     <!-- Profile Button (Circle) -->
 
     <!-- STUDENT -->
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:text="Welcome Admin"
+        android:textColor="@color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.013" />
+
     <ImageView
         android:id="@+id/profile_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="57dp"
+        android:layout_height="59dp"
         android:background="@drawable/circle_background"
         android:clickable="true"
         android:contentDescription="Profile"
@@ -29,61 +45,66 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_student"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="166dp"
+        android:layout_height="231dp"
         android:layout_margin="8dp"
+        android:backgroundTint="@color/light_yellow"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/card_vendor"
         app:layout_constraintBottom_toTopOf="@+id/card_delivery"
+        app:layout_constraintEnd_toStartOf="@+id/card_vendor"
         app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_icon"
         app:layout_constraintVertical_weight="1">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="User"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textColor="@color/dark_brown"
+            android:text="User"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
     <!-- VENDOR -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_vendor"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="166dp"
+        android:layout_height="231dp"
         android:layout_margin="8dp"
+        android:backgroundTint="@color/light_yellow"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_icon"
-        app:layout_constraintStart_toEndOf="@id/card_student"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/card_dashboard"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/card_student"
+        app:layout_constraintTop_toBottomOf="@id/profile_icon"
         app:layout_constraintVertical_weight="1">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Vendor"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:text="Vendor"
+            android:textColor="@color/dark_brown"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
     <!-- DELIVERY -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_delivery"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="166dp"
+        android:layout_height="231dp"
         android:layout_margin="8dp"
+        android:backgroundTint="@color/light_yellow"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="16dp"
@@ -101,14 +122,16 @@
             android:text="Delivery"
             android:gravity="center"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textColor="@color/dark_brown"
+            android:textSize="20sp" />
     </androidx.cardview.widget.CardView>
 
     <!-- DASHBOARD -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_dashboard"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="166dp"
+        android:layout_height="231dp"
+        android:backgroundTint="@color/light_yellow"
         android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"
@@ -126,8 +149,9 @@
             android:layout_height="match_parent"
             android:text="Dashboard"
             android:gravity="center"
+            android:textColor="@color/dark_brown"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
