--- a/app/src/main/res/layout/activity_delivery_profile.xml
+++ b/app/src/main/res/layout/activity_delivery_profile.xml
@@ -12,6 +12,19 @@
 
     <!-- CardView for Profile Fields -->
 
+    <ImageButton
+        android:id="@+id/logout_button_delivery"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/button_rounded"
+        android:src="@drawable/baseline_exit_to_app_24"
+        android:contentDescription="Logout"
+        android:scaleType="centerInside"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="383dp"
