--- a/app/src/main/res/layout/fragment_contactus___vendor.xml
+++ b/app/src/main/res/layout/fragment_contactus___vendor.xml
@@ -1,14 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@color/yellow"
     tools:context=".Contactus_Fragment_Vendor">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="Contact Us"
+        android:textSize="26sp"
+        android:textColor="@color/white"
+        android:layout_marginTop="40dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:paddingBottom="10dp" />
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="16dp"
+        android:padding="16dp">
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/dark_brown"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="Contact:+91 23456-78912"/>
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:text="Email: kirtiproject12@gamil.com"/>
+        <TextView
+            android:layout_width="350dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="80dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:text="Address: Banasthali Vidyapith,
+            Newai,Tonk, Rajasthan"/>
+
+
+        <LinearLayout
+            android:layout_width="358dp"
+            android:layout_height="440dp"
+            android:layout_marginTop="150dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/etName"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/light_yellow"
+                android:hint="Your Name"
+                android:padding="10dp" />
+
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/light_yellow"
+                android:hint="Your Email"
+                android:inputType="textEmailAddress"
+                android:padding="10dp" />
+
+            <EditText
+                android:id="@+id/etSubject"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/light_yellow"
+                android:hint="Subject"
+                android:padding="10dp" />
+
+            <EditText
+                android:id="@+id/etMessage"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/light_yellow"
+                android:gravity="top"
+                android:hint="Your Message"
+                android:inputType="textMultiLine"
+                android:padding="10dp" />
+
+            <Button
+                android:id="@+id/btnSubmit"
+                style="@style/TextAppearance.Material3.BodyLarge"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="30dp"
+                android:backgroundTint="@color/dark_orange"
+                android:padding="10dp"
+                android:text="Submit Feedback"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
