--- a/app/src/main/res/layout/fragment_dashboard__vendor.xml
+++ b/app/src/main/res/layout/fragment_dashboard__vendor.xml
@@ -125,7 +125,7 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:text="View and process customer orders"
                 android:textSize="14sp"
                 android:clickable="true"
