--- a/app/src/main/res/layout/fragment_profile___vendor.xml
+++ b/app/src/main/res/layout/fragment_profile___vendor.xml
@@ -1,20 +1,52 @@
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:orientation="vertical"
-    android:background="@drawable/fgprofile">
+    android:background="@color/yellow">
+
+    <!-- Your Profile TextView -->
+    <TextView
+        android:id="@+id/your_profile_title"
+        android:layout_width="274dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Your Profile"
+        android:textColor="@android:color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Logout Button (Round Shape) -->
+    <ImageButton
+        android:id="@+id/logout_button_vendor"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/button_rounded"
+        android:src="@drawable/baseline_exit_to_app_24"
+        android:contentDescription="Logout"
+        android:scaleType="centerInside"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- CardView for Profile Details -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="100dp"
         app:cardCornerRadius="12dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/your_profile_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +61,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:hint="NAME"
@@ -44,7 +76,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:hint="E-MAIL"
@@ -59,7 +91,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:hint="PHONE NO"
@@ -74,7 +106,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
                 android:focusable="false"
                 android:gravity="center_vertical"
                 android:hint="SHOP NAME"
@@ -82,67 +114,53 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
+            <Button
+                android:id="@+id/change_pass_btn_v"
+                android:layout_width="300dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="48dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Change Password"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/edit_profile_btn_v"
+                android:layout_width="300dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="48dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Edit Profile"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/save_btn_v"
+                android:layout_width="300dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="48dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Save Changes"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/add_address"
+                android:layout_width="300dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="48dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Add Address"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Buttons Section -->
-        <Button
-            android:id="@+id/change_pass_btn_v"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:text="Change Password"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="250dp"/>
-
-        <Button
-            android:id="@+id/edit_profile_btn_v"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:text="Edit Profile"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="310dp"/>
-
-        <Button
-            android:id="@+id/save_btn_v"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save Changes"
-            android:textSize="20sp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="370dp"/>
-        <Button
-            android:id="@+id/add_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add Address"
-            android:textSize="20sp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="430dp"/>
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/log_out__vendor_btn"
-        android:layout_width="387dp"
-        android:layout_height="49dp"
-        android:text="Logout"
-        />
+    <!-- Buttons Section -->
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
