--- a/app/src/main/res/layout/fragment_setting__fragement__vendor.xml
+++ b/app/src/main/res/layout/fragment_setting__fragement__vendor.xml
@@ -1,14 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:padding="16dp"
+android:background="@color/yellow">
+
+<!-- Title -->
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Settings"
+    android:textSize="30sp"
+    android:layout_gravity="center"
+    android:textStyle="bold"
+    android:textColor="@color/white"
+    android:layout_marginBottom="20dp"/>
+
+<!-- Account Settings -->
+<androidx.cardview.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Setting_Fragement_Vendor">
+    android:layout_height="wrap_content"
+    android:id="@+id/cardmyprofile"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp"
+    android:layout_marginBottom="12dp"
+    android:clickable="true"
+    android:focusable="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/dark_orange"
+        android:padding="16dp">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_app_settings_alt_24"
+            app:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Profile"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="12dp"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
+<!-- Notifications -->
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
+    android:id="@+id/cardnotification"
+    app:cardElevation="5dp"
+    android:layout_marginBottom="12dp"
+    android:clickable="true"
+    android:focusable="true"/>
+
+<!-- Privacy -->
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp"
+    android:layout_marginBottom="12dp"
+    android:clickable="true"
+    android:id="@+id/cardchnagepassword"
+    android:focusable="true">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/dark_orange"
+        android:padding="16dp">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_admin_panel_settings_24"
+            app:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Passwoerd"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="12dp"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
+<!-- Help & Support -->
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp"
+    android:layout_marginBottom="12dp"
+    android:id="@+id/cardhelp"
+    android:clickable="true"
+    android:focusable="true"/>
+
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp"
+    android:layout_marginBottom="12dp"
+    android:id="@+id/cardfaq"
+    android:clickable="true"
+    android:focusable="true">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/dark_orange"
+        android:padding="16dp">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_contact_support_24"
+            app:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FAQ's"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="12dp"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
+<!-- Logout -->
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="5dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:id="@+id/cardlogout"
+    android:layout_marginTop="20dp"
+    android:backgroundTint="@color/teal_700">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/dark_brown"
+        android:padding="16dp">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_exit_to_app_24"
+            app:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="12dp"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
+</LinearLayout>
