--- a/app/src/main/res/layout/item_admin_order.xml
+++ b/app/src/main/res/layout/item_admin_order.xml
@@ -6,6 +6,7 @@
     android:layout_margin="10dp"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="6dp"
+    android:backgroundTint="@color/light_yellow"
     android:padding="12dp">
 
     <LinearLayout
@@ -34,7 +35,7 @@
                 android:text="Order ID: order_123"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderItem"
@@ -42,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="Item: Almond"
                 android:textSize="16sp"
-                android:textColor="#000000" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderPrice"
@@ -50,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="Price: ₹100"
                 android:textSize="16sp"
-                android:textColor="#000000" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderQuantity"
@@ -58,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:text="Quantity: 1"
                 android:textSize="16sp"
-                android:textColor="#000000" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderStudentName"
@@ -66,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:text="Student: Krishma"
                 android:textSize="16sp"
-                android:textColor="#000000" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderAddress"
@@ -74,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:text="Address: Room 46, Hostel Chaityam"
                 android:textSize="15sp"
-                android:textColor="#444444" />
+                android:textColor="@color/dark_brown" />
 
             <TextView
                 android:id="@+id/adminOrderStatus"
