--- a/app/src/main/res/layout/item_admin_vendor.xml
+++ b/app/src/main/res/layout/item_admin_vendor.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginHorizontal="4dp"
     app:cardCornerRadius="12dp"
+    android:backgroundTint="@color/light_yellow"
     app:cardElevation="5dp">
 
     <LinearLayout
@@ -20,31 +21,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:textColor="@color/dark_brown"
             android:text="Vendor Name"/>
 
         <TextView android:id="@+id/textVendorEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp"
             android:text="Email"/>
 
         <TextView android:id="@+id/textVendorPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp"
             android:text="Phone"/>
 
         <TextView android:id="@+id/textVendorId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp"
             android:text="Vendor ID"/>
 
         <TextView android:id="@+id/textShopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp"
             android:text="Shop Name"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
