--- a/app/src/main/res/layout/item_order_deliver.xml
+++ b/app/src/main/res/layout/item_order_deliver.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:backgroundTint="@color/light_yellow"
     android:elevation="4dp"
     android:padding="12dp">
 
@@ -16,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Order ID"
-            android:textSize="16sp"
+            android:textColor="@color/dark_brown"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -24,14 +26,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:textColor="@color/dark_brown"
             android:text="Delivery Address"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnViewDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:backgroundTint="@color/dark_orange"
             android:text="View Details" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
