--- a/app/src/main/res/layout/activity_change_password_student.xml
+++ b/app/src/main/res/layout/activity_change_password_student.xml
@@ -2,72 +2,120 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="20dp"
+    tools:context=".ChangePasswordActivityStudent"
     android:background="@color/yellow"
     android:gravity="center">
 
+    <!-- Title Text -->
     <TextView
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:text="Change Password"
         android:textColor="@color/white"
-        android:textSize="34dp"
-        android:textStyle="bold"/>
+        android:textSize="34sp"
+    android:textStyle="bold"/>
 
+    <!-- CardView for Password Change Form -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="80dp"
-        app:cardCornerRadius="20dp"
-        >
-    <EditText
-    android:id="@+id/old_password"
-    android:layout_width="300dp"
-        android:background="@color/light_yellow"
-    android:layout_marginStart="40dp"
-    android:layout_marginEnd="40dp"
-        android:textColor="@color/dark_brown"
-    android:layout_height="48dp"
-    android:layout_marginTop="60dp"
-    android:hint="Old Password"
-    android:inputType="textPassword"/>
+        app:cardCornerRadius="20dp">
 
-    <EditText
-        android:id="@+id/new_password"
-        android:layout_width="300dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="120dp"
-        android:textColor="@color/dark_brown"
-        android:background="@color/light_yellow"
-        android:hint="New Password"
-        android:inputType="textPassword"/>
+        <!-- Old Password EditText with Eye Icon -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp">
+            <EditText
+                android:id="@+id/old_password"
+                android:layout_width="300dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:hint="Old Password"
+                android:inputType="textPassword"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"/>
 
-    <EditText
-        android:id="@+id/confirm_password"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/dark_brown"
-        android:layout_marginEnd="40dp"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:background="@color/light_yellow"
-        android:layout_marginTop="180dp"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"/>
+            <ImageView
+                android:id="@+id/show_old_password_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/baseline_block_24" />
+        </RelativeLayout>
 
-    <Button
-        android:id="@+id/change_password_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:textColor="@color/white"
-        android:textSize="22sp"
+        <!-- New Password EditText with Eye Icon -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp">
+            <EditText
+                android:id="@+id/new_password"
+                android:layout_width="300dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:hint="New Password"
+                android:inputType="textPassword"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"/>
+
+            <ImageView
+                android:id="@+id/show_new_password_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/baseline_block_24"/>
+        </RelativeLayout>
+
+        <!-- Confirm Password EditText with Eye Icon -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="180dp">
+            <EditText
+                android:id="@+id/confirm_password"
+                android:layout_marginStart="40dp"
+                android:textColor="@color/dark_brown"
+                android:layout_marginEnd="40dp"
+                android:layout_width="300dp"
+                android:layout_height="48dp"
+                android:background="@color/light_yellow"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"/>
+
+            <ImageView
+                android:id="@+id/show_confirm_password_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/baseline_block_24" />
+        </RelativeLayout>
+
+        <!-- Change Password Button -->
+        <Button
+            android:id="@+id/change_password_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:textColor="@color/white"
+            android:textSize="22sp"
         android:textStyle="bold"
         android:backgroundTint="@color/dark_orange"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="250dp"
         android:text="Change Password"/>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
