--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".LoginPage"
+    android:id="@+id/loginpage"
     android:background="#F5CB58">
 
     <TextView
@@ -77,17 +79,40 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/Password"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:textColorHint="@color/dark_brown"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/custom_edittext"
-                    android:hint="Password*"
-                    android:inputType="textPassword"
-                    android:padding="12dp"
-                    android:textColor="@color/black" />
+                    android:background="@color/light_yellow"
+                    android:layout_marginBottom="16dp">
+
+                    <EditText
+                        android:id="@+id/Password"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/custom_edittext"
+                        android:hint="Password*"
+                        android:inputType="textPassword"
+                        android:padding="12dp"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/dark_brown"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_toStartOf="@+id/togglePasswordVisibility"
+                        android:layout_toLeftOf="@+id/togglePasswordVisibility"
+                        android:paddingEnd="40dp" />
+
+                    <ImageView
+                        android:id="@+id/togglePasswordVisibility"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:background="@color/light_yellow"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/baseline_block_24"
+                        android:contentDescription="Toggle Password Visibility" />
+                </RelativeLayout>
+
 
                 <TextView
                     android:id="@+id/ForgotPassword"
