Admin Dashboard Done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,10 @@
     <color name="light_yellow">#F6F6D3</color>
     <color name="dark_orange">#EB4D22</color>
     <color name="dark_brown">#3D1F00</color>
+    <color name="green_success">#4CAF50</color>
+    <color name="orange_warning">#FF9800</color>
+    <color name="red_error">#F44336</color>
+    <color name="gray_default">#9E9E9E</color>
 
 
 </resources>
