--- a/app/src/main/res/layout/fragment_home___vendor.xml
+++ b/app/src/main/res/layout/fragment_home___vendor.xml
@@ -8,7 +8,7 @@
     android:background="@color/yellow"
     tools:context=".Home_Fragment_Vendor">
 
-    <com.google.android.material.button.MaterialButton
+ <!--   <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAddProduct"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="match_parent"
@@ -75,6 +75,6 @@
         app:backgroundTint="@color/dark_orange"
         app:cornerRadius="12dp"
         android:layout_marginTop="300dp"/>
-
+-->
 
 </FrameLayout>
