--- a/app/src/main/res/menu/bottom_nevigation_menu_vendor.xml
+++ b/app/src/main/res/menu/bottom_nevigation_menu_vendor.xml
@@ -12,6 +12,7 @@
         android:icon="@drawable/baseline_contact_support_24"/>
 
     <item
+        android:id="@+id/bottom_addition_vendor"
         android:title=""
         android:enabled="true"/>
 
